# squad-manager

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
.squad/: project.json
.squad/architect/: design_doc.md
.squad/devops/.gemini/: GEMINI.md
.squad/gatekeeper/.gemini/: GEMINI.md
.squad/sentinel/.gemini/: GEMINI.md
.squad/uat/.gemini/: GEMINI.md
personas/: architect.md  grunt.md
references/: example_reference.md
scripts/: call.sh  deploy.sh  director.sh
src/squad_manager/core/: dispatcher.py
src/squad_manager/utils/: logger.py
tests/: test_deploy.py  test_director.py  test_dispatcher.py  test_logger.py  test_pyproject.py  test_readme.py  test_structure.py
